--- a/src/app/user-page/user-projects/user-tasks/user-tasks.component.html
+++ b/src/app/user-page/user-projects/user-tasks/user-tasks.component.html
@@ -1,1 +1,1 @@
-<div *ngFor="let task of tasks"><span>{{ task.Name }}</span><span>{{ task.Description }}</span></div>
+<div *ngFor="let task of tasks"><span [routerLink]="['/tasks', task.Id]">{{ task.Name }}</span><span>{{ task.Description }}</span></div>
