--- a/src/app/project-page/team-member/team-member.component.html
+++ b/src/app/project-page/team-member/team-member.component.html
@@ -1,5 +1,5 @@
 <div class="member-row">
-  <span class="member-name" [routerLink]="['/users', member.Id]" routerLink="active">{{ member.FullName }}</span>
+  <span class="member-name" [routerLink]="['/users', member.Id]" routerLinkActive="active">{{ member.FullName }}</span>
   <span class="member-position">{{ member.Position.Name }}</span>
   <span class="member-email">{{ member.Email }}</span>
   <span class="member-skype">{{ member.Skype }}</span>
