--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -1,3 +1,10 @@
-<user-info-component [employeeId]="employeeId"></user-info-component>
-<user-skills-component [employeeId]="employeeId"></user-skills-component>
-<user-projects-component [employeeId]="employeeId"></user-projects-component>
+<div class="row">
+  <div class="col-md-offset-1 col-md-10">
+    <div class="row">
+      <user-info-component [employeeId]="employeeId"></user-info-component>
+      <user-skills-component [employeeId]="employeeId"></user-skills-component>
+    </div>
+    <h4>Projects</h4>
+    <user-projects-component [employeeId]="employeeId"></user-projects-component>
+  </div>
+</div>
