--- a/src/app/project-page/project-page.component.html
+++ b/src/app/project-page/project-page.component.html
@@ -1,1 +1,5 @@
-<team-component [projectId]="projectId"></team-component>
+<div class="row">
+  <div class="col-md-offset-2 col-md-8">
+    <team-component [projectId]="projectId"></team-component>
+  </div>
+</div>
