--- a/src/app/task-page/task-page.component.html
+++ b/src/app/task-page/task-page.component.html
@@ -1,27 +1,30 @@
-<div class="task-page" *ngIf="!isSubmitting">
-  <h2>Task {{ task.Name }}</h2>
-  <div class="task-info">
+<div class="task-page row" *ngIf="!isSubmitting">
+  <div class="col-md-offset-3 col-md-6">
 
-    <div class="task-info-left">
-      <div><b>Project: </b><span [routerLink]="['/projects', project.Id]">{{ project.Name }}</span></div>
-      <div *ngIf="!editing"><b>Status: </b>{{ staticData.ticketStatus[task.StatusId] }}</div>
-      <task-picker-component *ngIf="editing" [pickType]="'status'" [initialTask]="task.StatusId" [chooseTaskId]="chooseTaskId.bind(this)"></task-picker-component>
-      <div *ngIf="!editing"><b>Type: </b>{{ staticData.ticketType[task.TypeId] }}</div>
-      <task-picker-component *ngIf="editing" [pickType]="'type'" [initialTask]="task.TypeId" [chooseTaskId]="chooseTaskId.bind(this)"></task-picker-component>
-      <div><b>Estimate: </b>{{ task.Estimate }}</div>
-      <div><b>Start Date: </b>{{ task.StartDate }}</div>
-      <div><b>End Date: </b>ASAP</div>
-      <div><b>Description: </b>{{ task.Description }}</div>
-      <button type="button" name="button">New</button>
-      <button type="button" *ngIf="!editing" (click)="toggleEdit()" name="button">Edit</button>
-      <button type="button" *ngIf="editing" (click)="submitEdit()" name="button">Submit Edit</button>
-      <button type="button" name="button" (click)="deleteTask()">Delete</button>
-    </div>
+    <h2 class="text-center">Task {{ task.Name }}</h2>
+    <div class="task-info row">
 
-    <div class="task-info-right">
-      <div><b>Reporter: </b>{{ task.Reporter.FullName }}</div>
-      <user-picker-component *ngIf="editing"[employeeId]="task.Responsible.Id" [chooseUser]="chooseUser.bind(this)"></user-picker-component>
-      <div *ngIf="!editing"><b>Responsible: </b>{{ task.Responsible.FullName }}</div>
+      <div class="task-info-left col-md-6">
+        <div><b>Project: </b><a [routerLink]="['/projects', project.Id]">{{ project.Name }}</a></div>
+        <div *ngIf="!editing"><b>Status: </b>{{ staticData.ticketStatus[task.StatusId] }}</div>
+        <task-picker-component *ngIf="editing" [pickType]="'status'" [initialTask]="task.StatusId" [chooseTaskId]="chooseTaskId.bind(this)"></task-picker-component>
+        <div *ngIf="!editing"><b>Type: </b>{{ staticData.ticketType[task.TypeId] }}</div>
+        <task-picker-component *ngIf="editing" [pickType]="'type'" [initialTask]="task.TypeId" [chooseTaskId]="chooseTaskId.bind(this)"></task-picker-component>
+        <div><b>Estimate: </b>{{ task.Estimate }}</div>
+        <div><b>Start Date: </b>{{ task.StartDate }}</div>
+        <div><b>End Date: </b>ASAP</div>
+        <div><b>Description: </b>{{ task.Description }}</div>
+        <button type="button" class="btn btn-primary" name="button">New</button>
+        <button type="button" class="btn btn-success" *ngIf="!editing" (click)="toggleEdit()" name="button">Edit</button>
+        <button type="button" class="btn btn-success" *ngIf="editing" (click)="submitEdit()" name="button">Submit Edit</button>
+        <button type="button" class="btn btn-danger" name="button" (click)="deleteTask()">Delete</button>
+      </div>
+
+      <div class="task-info-right col-md-6">
+        <div><b>Reporter: </b>{{ task.Reporter.FullName }}</div>
+        <user-picker-component *ngIf="editing"[employeeId]="task.Responsible.Id" [chooseUser]="chooseUser.bind(this)"></user-picker-component>
+        <div *ngIf="!editing"><b>Responsible: </b>{{ task.Responsible.FullName }}</div>
+      </div>
     </div>
   </div>
 </div>
