--- a/src/app/user-page/user-skills/skill/skill.component.html
+++ b/src/app/user-page/user-skills/skill/skill.component.html
@@ -1,12 +1,10 @@
-<div class="skill-component">
-  <span><b>{{ skill.Name }}</b></span>
-  <span *ngIf="!edit">{{ staticData.Level[skillLevelId] }}</span>
-  <select *ngIf="edit" [(ngModel)]="skillLevelId" (ngModelChange)="updateLevel($event)">
-    <option [ngValue]="1">Trainee</option>
-    <option [ngValue]="2">Junior</option>
-    <option [ngValue]="3">Middle</option>
-    <option [ngValue]="4">Senior</option>
-  </select>
-  <button *ngIf="!edit" (click)="toggleEdit()">Edit</button>
-  <button *ngIf="edit" (click)="submitChanges()">Submit Changes</button>
-</div>
+<span class="col-md-6"><b>{{ skill.Name }}</b></span>
+<span class="col-md-4" *ngIf="!edit">{{ staticData.Level[skillLevelId] }}</span>
+<select class="col-md-4" *ngIf="edit" [(ngModel)]="skillLevelId" (ngModelChange)="updateLevel($event)">
+  <option [ngValue]="1">Trainee</option>
+  <option [ngValue]="2">Junior</option>
+  <option [ngValue]="3">Middle</option>
+  <option [ngValue]="4">Senior</option>
+</select>
+<button class="col-md-2" *ngIf="!edit" (click)="toggleEdit()">Edit</button>
+<button class="col-md-2" *ngIf="edit" (click)="submitChanges()">Submit Changes</button>
