--- a/src/app/user-page/user-skills/user-skills.component.html
+++ b/src/app/user-page/user-skills/user-skills.component.html
@@ -1,3 +1,5 @@
-<div class="skills-component">
-  <skill-component *ngFor="let skill of skills" [skill]="skill" [EmployeeId]="employeeId" [updateSkill]="updateSkill.bind(this)"></skill-component>
+<div class="skills-component col-md-4 col-md-offset-1">
+  <div class="row">
+    <skill-component *ngFor="let skill of skills" [skill]="skill" [EmployeeId]="employeeId" [updateSkill]="updateSkill.bind(this)"></skill-component>
+  </div>
 </div>
