--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -44,7 +44,7 @@
 
       <li class="nav-item">
         <a class="nav-link"
-          routerLink="/admin/users/"
+          routerLink="/admin/projects/"
           routerLinkActive="active">
           <i class="ion-gear-a"></i>&nbsp;Admin
         </a>
