--- a/src/app/users-admin-page/users-admin-page.component.html
+++ b/src/app/users-admin-page/users-admin-page.component.html
@@ -5,7 +5,7 @@
         <input type="text" [(ngModel)]="filterName" (ngModelChange)="filterNameChange($event)" />
       </div>
       <div class="col-md-3 col-md-offset-5">
-        <button type="button" class="btn btn-primary pull-right" name="button">Add employee</button>
+        <button type="button" class="btn btn-primary pull-right" routerLink="/registration" name="button">Add employee</button>
       </div>
     </div>
     <div class="employees-container row">
