--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -1,3 +1,41 @@
-<p>
-  registration-page works!
-</p>
+<div class="row">
+  <div class="col-md-offset-2 col-md-8">
+    <div class="row">
+      <div class="col-md-6 text-right">
+        <div><b>Name: </b></div>
+        <div><b>Last Name: </b></div>
+        <div><b>Email: </b></div>
+        <div><b>Location: </b></div>
+        <div><b>Birthday: </b></div>
+        <div><b>Address: </b></div>
+        <div><b>Skype: </b></div>
+        <div><b>Phone: </b></div>
+        <div><b>Position: </b></div>
+        <div><b>Password: </b></div>
+      </div>
+      <div class="col-md-6 text-left">
+        <div><input type="text" [(ngModel)]="First"></div>
+        <div><input type="text" [(ngModel)]="Last"></div>
+        <div><input type="text" [(ngModel)]="Email"></div>
+        <div>
+          <select [(ngModel)]="LocationId">
+            <option *ngFor="let key of ObjectKeys(staticData.Loc)" [ngValue]="key">{{ staticData.Loc[key] }}</option>
+          </select>
+        </div>
+        <div><input type="text" [(ngModel)]="Birthday"></div>
+        <div><input type="text" [(ngModel)]="Address"></div>
+        <div><input type="text" [(ngModel)]="Skype"></div>
+        <div><input type="text" [(ngModel)]="Phone"></div>
+        <div>
+          <select [(ngModel)]="PositionId">
+            <option *ngFor="let key of ObjectKeys(staticData.projectPosition)" [ngValue]="key">{{ staticData.projectPosition[key] }}</option>
+          </select>
+        </div>
+        <div><input type="password" [(ngModel)]="Password"></div>
+      </div>
+    </div>
+    <div class="text-center">
+      <button type="button" class="btn btn-primary" (click)="submitUser()">Submit</button>
+    </div>
+  </div>
+</div>
