--- a/src/app/projects-admin-page/projects-admin-page.component.html
+++ b/src/app/projects-admin-page/projects-admin-page.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-offset-2 col-md-8">
     <div class="row">
       <div class="col-md-5"><input type="text" [(ngModel)]="filterName" (ngModelChange)="filterNameChange($event)"></div>
-      <div class="col-md-offset-6 col-md-1"><button type="button" class="btn btn-primary">Add project</button></div>
+      <div class="col-md-offset-6 col-md-1"><button type="button" class="btn btn-primary" routerLink='/newproject/'>Add project</button></div>
     </div>
     <div class="col-md-12">
       <div class="row">
