--- a/src/app/projects-admin-page/projects-admin-page.component.html
+++ b/src/app/projects-admin-page/projects-admin-page.component.html
@@ -15,7 +15,7 @@
         <div *ngIf="editingId !== project.Id">
           <span class="col-md-1"><a [routerLink]="['/projects', project.Id]">{{ project.Name }}</a></span>
           <span class="col-md-1">{{ project.CustomerName }}</span>
-          <span class="col-md-3">{{ project.StartDate }}</span>
+          <span class="col-md-3">{{ moment(project.StartDate).format('DD-MM-YYYY') }}</span>
           <p class="col-md-5">{{ project.Description }}</p>
           <span class="col-md-1"><button type="button" (click)="setEdit(project.Id)">Edit</button></span>
           <span class="col-md-1"><button type="button" (click)="deleteProject(project.Id)">X</button></span>
@@ -23,9 +23,10 @@
         <div *ngIf="editingId === project.Id">
           <span class="col-md-1"><input type="text" [(ngModel)]="edit.Name"></span>
           <span class="col-md-1"><input type="text" [(ngModel)]="edit.CustomerName"></span>
-          <span class="col-md-3">{{ edit.StartDate }}</span>
+          <span class="col-md-3"><dp-date-picker [(ngModel)]="edit.StartDate"></dp-date-picker></span>
           <span class="col-md-5"><input type="text" [(ngModel)]="edit.Description"></span>
-          <span class="col-md-2"><button type="button" (click)="submitChanges()">Submit</button></span>
+          <span class="col-md-1"><button type="button" (click)="submitChanges()">Submit</button></span>
+          <span class="col-md-1"><button type="button" (click)="closeEdit()">Cancel</button></span>
         </div>
       </div>
     </div>
