--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -6,27 +6,11 @@
         <h1 class="text-xs-center">{{ title }}</h1>
         <p class="text-xs-center">
           <a [routerLink]="['/login']" *ngIf="authType == 'register'">Have an account?</a>
-          <a [routerLink]="['/register']" *ngIf="authType == 'login'">Need an account?</a>
+          <a [routerLink]="['/registration']" *ngIf="authType == 'login'">Need an account?</a>
         </p>
         <list-errors [errors]="errors"></list-errors>
         <form [formGroup]="authForm" (ngSubmit)="submitForm()">
           <fieldset [disabled]="isSubmitting">
-            <fieldset class="form-group">
-              <input
-                formControlName="First"
-                placeholder="First name"
-                class="form-control form-control-lg"
-                type="text"
-                *ngIf="authType == 'register'" />
-            </fieldset>
-            <fieldset class="form-group">
-              <input
-                formControlName="Last"
-                placeholder="Last name"
-                class="form-control form-control-lg"
-                type="text"
-                *ngIf="authType == 'register'" />
-            </fieldset>
             <fieldset class="form-group">
               <input
                 formControlName="Login"
