--- a/src/app/project-page/project-page.component.html
+++ b/src/app/project-page/project-page.component.html
@@ -1,4 +1,13 @@
-<div class="row">
+<div *ngIf="!isSubmitting" class="row">
+  <h1 class="text-center">{{ project.Name }}</h1>
+  <div class="col-md-offset-4 col-md-3">
+    <div><b>Customer: </b>{{ project.CustomerName }}</div>
+    <div><b>Start Date: </b>{{ moment(project.StartDate).format('DD-MM-YYYY') }}</div>
+    <div><b>End Date: </b>{{ moment(project.EndDate ).format('DD-MM-YYYY') }}</div>
+    <div><b>Description:</b></div>
+    <p>{{ project.Description }}</p>
+  </div>
+
   <div class="col-md-offset-2 col-md-8">
     <team-component [projectId]="projectId"></team-component>
   </div>
