--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -1,27 +1,27 @@
 <div class="row">
   <div class="col-md-offset-2 col-md-8">
     <div class="row" [formGroup]="registrationForm">
-        <div class="col-md-6 text-right"><b>Name: </b></div><div class="col-md-6 text-left"><input class="form-control" type="text" formControlName="First"></div>
-        <div class="col-md-6 text-right"><b>Last Name: </b></div><div class="col-md-6 text-left"><input class="form-control" type="text" formControlName="Last"></div>
-        <div class="col-md-6 text-right"><b>Email: </b></div><div class="col-md-6 text-left"><input class="form-control" type="text" formControlName="Email"></div>
-        <div class="col-md-6 text-right"><b>Location: </b></div>
-        <div class="col-md-6 text-left">
-          <select formControlName="LocationId">
+        <div class="row"><div class="col-md-3 text-right"><b>Name: </b></div><div class="col-md-3 text-left"><input class="form-control" type="text" formControlName="First"></div></div>
+        <div class="row"><div class="col-md-3 text-right"><b>Last Name: </b></div><div class="col-md-3 text-left"><input class="form-control" type="text" formControlName="Last"></div></div>
+        <div class="row"><div class="col-md-3 text-right"><b>Email: </b></div><div class="col-md-3 text-left"><input class="form-control" type="text" formControlName="Email"></div></div>
+        <div class="row"><div class="col-md-3 text-right"><b>Location: </b></div>
+        <div class="col-md-3 text-left">
+          <select class="form-control" formControlName="LocationId">
             <option *ngFor="let key of ObjectKeys(staticData.Loc)" [ngValue]="key">{{ staticData.Loc[key] }}</option>
           </select>
-        </div>
-        <div class="col-md-6 text-right"><b>Birthday: </b></div><div class="col-md-6 text-left"><dp-date-picker [ngModelOptions]="{standalone: true}" [(ngModel)]="Birthday"></dp-date-picker></div>
-        <div class="col-md-6 text-right"><b>Address: </b></div><div class="col-md-6 text-left"><input class="form-control" type="text" formControlName="Address"></div>
-        <div class="col-md-6 text-right"><b>Skype: </b></div><div class="col-md-6 text-left"><input class="form-control" type="text" formControlName="Skype"></div>
-        <div class="col-md-6 text-right"><b>Phone: </b></div><div class="col-md-6 text-left"><input class="form-control" type="text" formControlName="Phone"></div>
-        <div class="col-md-6 text-right"><b>Position: </b></div>
-        <div class="col-md-6 text-left">
-          <select formControlName="PositionId">
+        </div></div>
+        <div class="row"><div class="col-md-3 text-right"><b>Birthday: </b></div><div class="col-md-3 text-left"><dp-date-picker [ngModelOptions]="{standalone: true}" [(ngModel)]="Birthday"></dp-date-picker></div></div>
+        <div class="row"><div class="col-md-3 text-right"><b>Address: </b></div><div class="col-md-3 text-left"><input class="form-control" type="text" formControlName="Address"></div></div>
+        <div class="row"><div class="col-md-3 text-right"><b>Skype: </b></div><div class="col-md-3 text-left"><input class="form-control" type="text" formControlName="Skype"></div></div>
+        <div class="row"><div class="col-md-3 text-right"><b>Phone: </b></div><div class="col-md-3 text-left"><input class="form-control" type="text" formControlName="Phone"></div></div>
+        <div class="row"><div class="col-md-3 text-right"><b>Position: </b></div>
+        <div class="col-md-3 text-left">
+          <select class="form-control" formControlName="PositionId">
             <option *ngFor="let key of ObjectKeys(staticData.projectPosition)" [ngValue]="key">{{ staticData.projectPosition[key] }}</option>
           </select>
-        </div>
-        <div class="col-md-6 text-right"><b>Password: </b></div>
-        <div class="col-md-6 text-left"><input class="form-control" type="password" formControlName="Password"></div>
+        </div></div>
+        <div class="row"><div class="col-md-3 text-right"><b>Password: </b></div>
+        <div class="col-md-3 text-left"><input class="form-control" type="password" formControlName="Password"></div></div>
     </div>
     <div class="text-center">
       <button [disabled]="!registrationForm.valid" type="button" class="btn btn-primary" (click)="submitUser()">Submit</button>
